Added a contact option

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,19 @@
         <!-- sidebar -->
         <div
             class="left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto flex flex-col  font-semibold ">
-            <div class="pt-5 mb-20  mx-auto">Logo </div>
+            <div class="flex items-center pt-5 mb-20  mx-auto">
+                <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                        d="M470.779 285.404c-9.673-9.673-25.361-9.673-35.036 0l-54.962 54.962c.007-.595.023-1.188.023-1.785V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871h-49.548V24.774C281.707 11.092 270.615 0 256.933 0c-13.682 0-24.774 11.092-24.774 24.774v156.903H182.61V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871H83.513v-74.323c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774V338.58c0 95.624 77.794 173.42 173.419 173.42 47.457 0 90.52-19.167 121.864-50.161.469-.405.94-.806 1.386-1.255L470.778 320.44c9.676-9.676 9.676-25.36.001-35.036z"
+                        fill="#eeb784" />
+                    <path
+                        d="M470.779 285.404c-9.673-9.673-25.361-9.673-35.036 0l-54.962 54.962c.007-.595.023-1.188.023-1.785V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871h-49.548V24.774C281.707 11.092 270.615 0 256.933 0c-13.682 0-24.774 11.092-24.774 24.774v156.903h-24.774V512c47.457 0 90.52-19.167 121.864-50.161.469-.405.94-.806 1.386-1.255L470.779 320.44c9.675-9.676 9.675-25.36 0-35.036z"
+                        fill="#e68842" />
+                </svg>
+                <span>AWARE</span>
+
+
+            </div>
             <ul class="">
                 <li class=" pl-1 mb-4">
                     <a href="#" class=" flex items-center mx-4  ">
@@ -24,7 +36,7 @@
                         </svg>
 
 
-                        <span class="pl-2 font-mono font-semibold text-sm bg text-gray-400 ">DASHBOARD</span>
+                        <span class="pl-2 font-mono font-semibold text-sm bg text-gray-400 ">Dashboard</span>
                     </a>
                 </li>
                 <li
@@ -111,7 +123,7 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">History</span>
+                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">Contact</span>
                     </a>
                 </li>
             </ul>
