added search bar

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <!-- sidebar -->
         <div
             class="left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto flex flex-col  font-semibold ">
-            <div class="flex items-center pt-5 mb-20  mx-auto">
+            <div class="flex items-center pt-5 mb-20  mx-4 ">
                 <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path
                         d="M470.779 285.404c-9.673-9.673-25.361-9.673-35.036 0l-54.962 54.962c.007-.595.023-1.188.023-1.785V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871h-49.548V24.774C281.707 11.092 270.615 0 256.933 0c-13.682 0-24.774 11.092-24.774 24.774v156.903H182.61V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871H83.513v-74.323c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774V338.58c0 95.624 77.794 173.42 173.419 173.42 47.457 0 90.52-19.167 121.864-50.161.469-.405.94-.806 1.386-1.255L470.778 320.44c9.676-9.676 9.676-25.36.001-35.036z"
@@ -28,20 +28,21 @@
 
             </div>
             <ul class="">
-                <li class=" pl-1 mb-4">
-                    <a href="#" class=" flex items-center mx-4  ">
+                <li
+                    class=" border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3">
+                    <a href="#" class=" flex items-center mx-6  ">
                         <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
                             <path
                                 d="M213.333 0H384v128H213.333zM0 0h170.667v213.333H0zM0 256h170.667v128H0zM213.333 170.667H384V384H213.333z" />
                         </svg>
 
 
-                        <span class="pl-2 font-mono font-semibold text-sm bg text-gray-400 ">Dashboard</span>
+                        <span class="ml-4 font-mono font-medium text-sm bg text-gray-400 ">Dashboard</span>
                     </a>
                 </li>
                 <li
-                    class=" border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
-                    <a href="#" class="flex items-center  mx-4 ">
+                    class=" border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3  ">
+                    <a href="#" class="flex items-center  mx-6">
 
                         <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.001 512.001">
                             <path
@@ -53,8 +54,8 @@
                     </a>
                 </li>
                 <li
-                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2 ">
-                    <a href="#" class="flex items-center  mx-4 ">
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3 ">
+                    <a href="#" class="flex items-center  mx-6 ">
                         <svg class="w-3 fill-current" viewBox="0 0 64 64" width="512"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -79,8 +80,8 @@
                 </li>
 
                 <li
-                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
-                    <a href="#" class="flex items-center  mx-4 ">
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3  ">
+                    <a href="#" class="flex items-center  mx-6">
 
                         <svg class="w-3 fill-current" viewBox="0 0 512 512" width="512pt"
                             xmlns="http://www.w3.org/2000/svg">
@@ -95,8 +96,8 @@
                 </li>
 
                 <li
-                    class="border-l-4 border-transparent  hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2 ">
-                    <a href="#" class="flex items-center  mx-4 ">
+                    class="border-l-4 border-transparent  hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3 ">
+                    <a href="#" class="flex items-center  mx-6 ">
                         <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
                                 d="M44.07 403.93C42.21 402.07 39.63 401 37 401s-5.21 1.069-7.07 2.93C28.07 405.79 27 408.37 27 411s1.07 5.21 2.93 7.069C31.79 419.93 34.37 421 37 421s5.21-1.07 7.07-2.931C45.93 416.21 47 413.63 47 411s-1.07-5.21-2.93-7.07z" />
@@ -112,8 +113,8 @@
                 </li>
 
                 <li
-                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
-                    <a href="#" class="flex items-center  mx-4 ">
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3  ">
+                    <a href="#" class="flex items-center mx-6 ">
 
                         <svg class="w-3 fill-current" viewBox="0 0 512 512" width="512pt"
                             xmlns="http://www.w3.org/2000/svg">
@@ -123,7 +124,7 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">Contact</span>
+                        <span class="ml-4  font-medium font-mono  text-xs  text-gray-600">Contact</span>
                     </a>
                 </li>
             </ul>
@@ -132,8 +133,28 @@
         </div>
 
         <!-- content section -->
-        <div class="right-section content-dashboard bg-gray-800-dashboard flex-1 overflow-y-auto ">content area - Lorem
-            .</div>
+        <div class="right-section content-dashboard bg-gray-800-dashboard flex-1 overflow-y-auto flex-col">
+            <div class="profile-section flex items-center justify-between  border-b border-gray-hover-sidebar py-3">
+                <div class="  search-bar ml-4">
+
+                    <input type="text"
+                        class="relative  text-xs mr-4 bg-transparent border border-transparent rounded w-48 px-4 pl-8 py-1 focus:outline-none  placeholder-gray-700"
+                        placeholder="Search">
+
+                    <div class="absolute pb-2 top-0 ">
+                        <svg class=" mt-5 ml-2 w-3 fill-current  text-gray-500 " xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 56.966 56.966">
+                            <path
+                                d="M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="image-section">
+
+                </div>
+            </div>
+
+        </div>
     </div>
 
 
