added user profile image

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 
         <!-- content section -->
         <div class="right-section content-dashboard bg-gray-800-dashboard flex-1 overflow-y-auto flex-col">
-            <div class="profile-section flex items-center justify-between  border-b border-gray-hover-sidebar py-3">
+            <div class="profile-section flex items-center justify-between   py-3 shadow-md ">
                 <div class="  search-bar ml-4">
 
                     <input type="text"
@@ -149,12 +149,15 @@
                         </svg>
                     </div>
                 </div>
-                <div class="image-section">
-
+                <div class="image-section mr-8">
+                    <div class="md:ml-4  mt-3 md:mt-0">
+                        <img src="/public/img/sam.png" class="rounded-full h-8 w-8" alt="profile pic">
+                    </div>
                 </div>
             </div>
-
         </div>
+
+    </div>
     </div>
 
 
