fixed up the search bar

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="main-div flex overflow-y-hidden h-screen text-sm text-gray-400">
         <!-- sidebar -->
         <div
-            class="left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto flex flex-col  font-semibold ">
+            class=" flex flex-col left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto   font-semibold ">
             <div class="flex items-center pt-5 mb-20  mx-4 ">
                 <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path
@@ -128,7 +128,13 @@
                     </a>
                 </li>
             </ul>
-            <div>.</div>
+            <div class="flex items-center mx-auto flex-col justify-end bg-gray-300">
+                <div>
+                    <h4>Logout</h4>
+                </div>
+
+
+            </div>
 
         </div>
 
