nightly - added the welcome section

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="flex h-screen overflow-y-hidden text-sm text-gray-400 main-div">
         <!-- sidebar -->
         <div
-            class="flex flex-col justify-between flex-none w-48 overflow-y-auto font-semibold left-section sidebar bg-dark-color-sidebar">
+            class="flex flex-col justify-between flex-none w-56 overflow-y-auto font-semibold left-section sidebar bg-dark-color-sidebar">
             <!-- <div class="flex items-center pt-5 mx-4 mb-20 ">
                 <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                     <path
@@ -28,7 +28,7 @@
 
             </div> -->
             <ul class="">
-                <li class="py-3 pt-5 mb-4 border-l-4 border-transparent bg">
+                <li class="my-8 border-l-4 border-transparent bg">
                     <a href="#" class="flex items-center mx-6 ">
                         <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path
@@ -40,7 +40,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-lg font-medium text-gray-400 bg ">Aware</span>
+                        <span class="ml-4 font-mono text-lg font-roboto text-orange-500 bg ">Aware</span>
                     </a>
                 </li>
                 <li
@@ -52,7 +52,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-sm font-medium text-gray-400 bg ">Dashboard</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 bg ">Dashboard</span>
                     </a>
                 </li>
                 <li
@@ -65,7 +65,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-medium text-gray-600 font-m">Home</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Home</span>
                     </a>
                 </li>
                 <li
@@ -90,7 +90,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-medium text-gray-600 font-m">Complaints</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Complaints</span>
                     </a>
                 </li>
 
@@ -106,7 +106,7 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4 font-mono text-xs font-medium text-gray-600 font-m">History</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">History</span>
                     </a>
                 </li>
 
@@ -123,7 +123,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-medium text-gray-600 font-m">Support</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Support</span>
                     </a>
                 </li>
 
@@ -139,12 +139,12 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4 font-mono text-xs font-medium text-gray-600">Contact</span>
+                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500">Contact</span>
                     </a>
                 </li>
             </ul>
             <div class="py-5 text-center border-t border-gray-900 ">
-                <button class="font-mono text-sm font-medium text-gray-600 hover:text-gray-400">Logout</button>
+                <button class="font-mono text-sm font-roboto text-gray-500 hover:text-gray-400">Logout</button>
             </div>
 
         </div>
@@ -174,10 +174,10 @@
 
 
             </div>
-            <div class="w-3/5 m-8 border welcome-section bg-gray-900-insidecontent">
-                <div class="h-56">
-                    <h1>Welcome, anything to report today?</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sed!</p>
+            <div class="w-3/4 m-8 border welcome-section bg-gray-900-insidecontent rounded border-transparent">
+                <div class="h-40 p-4">
+                    <h1 class="font-roboto text-lg text-orange-500">Hello Sam! </h1>
+                    <p>Welcome back, anything you'd like to report today? </p>
                 </div>
 
             </div>
