--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-lg font-roboto text-orange-500 bg ">Aware</span>
+                        <span class="ml-4 font-mono text-lg text-orange-500 font-roboto bg ">Aware</span>
                     </a>
                 </li>
                 <li
@@ -52,7 +52,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 bg ">Dashboard</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto bg ">Dashboard</span>
                     </a>
                 </li>
                 <li
@@ -65,7 +65,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Home</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto font-m">Home</span>
                     </a>
                 </li>
                 <li
@@ -90,7 +90,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Complaints</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto font-m">Complaints</span>
                     </a>
                 </li>
 
@@ -106,7 +106,7 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">History</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto font-m">History</span>
                     </a>
                 </li>
 
@@ -123,7 +123,7 @@
                         </svg>
 
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500 font-m">Support</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto font-m">Support</span>
                     </a>
                 </li>
 
@@ -139,12 +139,12 @@
                                 d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
                         </svg>
 
-                        <span class="ml-4 font-mono text-xs font-roboto text-gray-500">Contact</span>
+                        <span class="ml-4 font-mono text-xs text-gray-500 font-roboto">Contact</span>
                     </a>
                 </li>
             </ul>
             <div class="py-5 text-center border-t border-gray-900 ">
-                <button class="font-mono text-sm font-roboto text-gray-500 hover:text-gray-400">Logout</button>
+                <button class="font-mono text-sm text-gray-500 font-roboto hover:text-gray-400">Logout</button>
             </div>
 
         </div>
@@ -166,18 +166,35 @@
                         </svg>
                     </div>
                 </div>
-                <div class="mr-8 image-section">
-                    <div class="mt-3 md:ml-4 md:mt-0">
+                <div class="relative mr-8 image-section">
+                    <button id="profile"
+                        class="block w-8 h-8 overflow-hidden border-2 border-gray-600 rounded-full focus:outline-none focus:border-white">
+                        <img class="object-cover w-full h-full" src="/public/img/sam.png" alt="profile pic">
+                    </button>
+                    <!-- class="w-8 h-8 rounded-full" -->
+                    <!-- <div class="mt-3 md:ml-4 md:mt-0">
                         <img src="/public/img/sam.png" class="w-8 h-8 rounded-full" alt="profile pic">
+                    </div> -->
+
+                    <div id="profile-menu"
+                        class="absolute right-0 w-48 py-2 mt-2 bg-white rounded-lg shadow-md hide bg-dark-color-sidebar">
+                        <a href="#"
+                            class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Account
+                            settings</a>
+                        <a href="#"
+                            class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Support</a>
+                        <a href="#"
+                            class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Sign
+                            out</a>
                     </div>
                 </div>
 
 
             </div>
-            <div class="w-3/4 m-8 border welcome-section bg-gray-900-insidecontent rounded border-transparent">
+            <div class="w-3/4 m-12 border border-transparent rounded welcome-section bg-gray-900-insidecontent">
                 <div class="h-40 p-4">
-                    <h1 class="font-roboto text-lg text-orange-500">Hello Sam! </h1>
-                    <p>Welcome back, anything you'd like to report today? </p>
+                    <h1 class="text-lg text-orange-500 font-roboto">Hello Sam! </h1>
+                    <p class="font-roboto">Welcome back, anything you'd like to report today? </p>
                 </div>
 
             </div>
@@ -186,7 +203,7 @@
     </div>
     </div>
 
-
+    <script src="/public/build/scripts/app.js"></script>
 </body>
 
 </html>
