--- a/public/index.html
+++ b/public/index.html
@@ -184,8 +184,7 @@
                         <a href="#"
                             class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Support</a>
                         <a href="#"
-                            class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Sign
-                            out</a>
+                            class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Logout</a>
                     </div>
                 </div>
 
