deleted the logout section  from the bottom

--- a/public/index.html
+++ b/public/index.html
@@ -143,9 +143,9 @@
                     </a>
                 </li>
             </ul>
-            <div class="py-5 text-center border-t border-gray-900 ">
+            <!-- <div class="py-5 text-center border-t border-gray-900 ">
                 <button class="font-mono text-sm text-gray-500 font-roboto hover:text-gray-400">Logout</button>
-            </div>
+            </div> -->
 
         </div>
 
