able close the dropdown when clicked outside

--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,9 @@
 
             </div> -->
             <ul class="">
-<<<<<<< HEAD
-                <li class=" mb-4 pt-5 border-l-4 border-transparent  py-3">
-                    <a href="#" class=" flex items-center mx-6  ">
-                        <svg class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-=======
                 <li class="my-8 border-l-4 border-transparent bg">
                     <a href="#" class="flex items-center mx-6 ">
                         <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
->>>>>>> 2f831b6335ef2b437f1012b0f287debc7729d3c0
                             <path
                                 d="M470.779 285.404c-9.673-9.673-25.361-9.673-35.036 0l-54.962 54.962c.007-.595.023-1.188.023-1.785V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871h-49.548V24.774C281.707 11.092 270.615 0 256.933 0c-13.682 0-24.774 11.092-24.774 24.774v156.903H182.61V57.806c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774v123.871H83.513v-74.323c0-13.682-11.092-24.774-24.774-24.774s-24.774 11.092-24.774 24.774V338.58c0 95.624 77.794 173.42 173.419 173.42 47.457 0 90.52-19.167 121.864-50.161.469-.405.94-.806 1.386-1.255L470.778 320.44c9.676-9.676 9.676-25.36.001-35.036z"
                                 fill="#eeb784" />
@@ -50,15 +44,9 @@
                     </a>
                 </li>
                 <li
-<<<<<<< HEAD
-                    class=" border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3">
-                    <a href="#" class=" flex items-center mx-6  ">
-                        <svg class="w-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
-=======
                     class="py-3 border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light">
                     <a href="#" class="flex items-center mx-6 ">
                         <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
->>>>>>> 2f831b6335ef2b437f1012b0f287debc7729d3c0
                             <path
                                 d="M213.333 0H384v128H213.333zM0 0h170.667v213.333H0zM0 256h170.667v128H0zM213.333 170.667H384V384H213.333z" />
                         </svg>
@@ -81,15 +69,9 @@
                     </a>
                 </li>
                 <li
-<<<<<<< HEAD
-                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3 ">
-                    <a href="#" class="flex items-center  mx-6 ">
-                        <svg class="w-4 fill-current" viewBox="0 0 64 64" width="512"
-=======
                     class="py-3 border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light ">
                     <a href="#" class="flex items-center mx-6 ">
                         <svg class="w-3 fill-current" viewBox="0 0 64 64" width="512"
->>>>>>> 2f831b6335ef2b437f1012b0f287debc7729d3c0
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M25.36 50H10V4h38v4.26a1 1 0 002 0V3a1 1 0 00-1-1H9a1 1 0 00-1 1v48a1 1 0 001 1h16.36a1 1 0 000-2zM48 31.74v1.32a1 1 0 002 0v-1.32a1 1 0 10-2 0z" />
@@ -129,15 +111,9 @@
                 </li>
 
                 <li
-<<<<<<< HEAD
-                    class="border-l-4 border-transparent  hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-3 ">
-                    <a href="#" class="flex items-center  mx-6 ">
-                        <svg class="w-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-=======
                     class="py-3 border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light ">
                     <a href="#" class="flex items-center mx-6 ">
                         <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
->>>>>>> 2f831b6335ef2b437f1012b0f287debc7729d3c0
                             <path
                                 d="M44.07 403.93C42.21 402.07 39.63 401 37 401s-5.21 1.069-7.07 2.93C28.07 405.79 27 408.37 27 411s1.07 5.21 2.93 7.069C31.79 419.93 34.37 421 37 421s5.21-1.07 7.07-2.931C45.93 416.21 47 413.63 47 411s-1.07-5.21-2.93-7.07z" />
                             <path
@@ -193,13 +169,13 @@
                 <div class="relative mr-8 image-section">
                     <button id="profile"
                         class="block w-8 h-8 overflow-hidden border-2 border-gray-600 rounded-full focus:outline-none focus:border-white">
-                        <img class="object-cover w-full h-full" src="/public/img/sam.png" alt="profile pic">
+                        <img class="profile-image object-cover w-full h-full" src="/public/img/sam.png" alt="profile pic">
                     </button>
                     <!-- class="w-8 h-8 rounded-full" -->
                     <!-- <div class="mt-3 md:ml-4 md:mt-0">
                         <img src="/public/img/sam.png" class="w-8 h-8 rounded-full" alt="profile pic">
                     </div> -->
-
+                    <button id="close-menu" class="absolute hidden top-0 right-0 bottom-0 left-0 bg-red-500 h-full w-full"></button>
                     <div id="profile-menu"
                         class="absolute right-0 w-48 py-2 mt-2 bg-white rounded-lg shadow-md hide bg-dark-color-sidebar">
                         <a href="#"
