--- a/public/index.html
+++ b/public/index.html
@@ -171,14 +171,11 @@
                         class="block w-8 h-8 overflow-hidden border-2 border-gray-600 rounded-full focus:outline-none focus:border-white">
                         <img class="profile-image object-cover w-full h-full" src="/public/img/sam.png" alt="profile pic">
                     </button>
-                    <!-- class="w-8 h-8 rounded-full" -->
-                    <!-- <div class="mt-3 md:ml-4 md:mt-0">
-                        <img src="/public/img/sam.png" class="w-8 h-8 rounded-full" alt="profile pic">
-                    </div> -->
-                    <button id="close-menu" class="absolute hidden top-0 right-0 bottom-0 left-0 bg-red-500 h-full w-full"></button>
+                   
+                    <!-- <button id="close-menu" class="absolute hidden top-0 right-0 bottom-0 left-0 bg-red-500 h-full w-full"></button> -->
                     <div id="profile-menu"
                         class="absolute right-0 w-48 py-2 mt-2 bg-white rounded-lg shadow-md hide bg-dark-color-sidebar">
-                        <a href="#"
+                        <a href=""
                             class="block px-4 py-2 text-xs text-gray-800 font-roboto hover:bg-gray-900-insidecontent hover:text-white">Account
                             settings</a>
                         <a href="#"
