changed dropdown menu

--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
                     <div id="profile-menu"
                         class="absolute right-0 w-48 py-2 mt-2 bg-white rounded-lg shadow-md hide bg-dark-color-sidebar">
                         <a href=""
-                            class="block px-4 py-2 text-xs text-gray-800 font-sans hover:bg-gray-900-insidecontent hover:text-white">Account
+                            class="block px-4 py-2 text-xs text-gray-800 font-sans hover:bg-gray-900-insidecontent hover:text-white">Profile
                             settings</a>
                         <a href="#"
                             class="block px-4 py-2 text-xs text-gray-800 font-sans hover:bg-gray-900-insidecontent hover:text-white">Support</a>
